# MiraAvatar

./: .dockerignore  .env.example  .gitignore  .replit  install_deps.py  install_torch_cpu.py  package-lock.json  package.json  pyproject.toml  replit.md  start-production.sh  test-ai-detector.js  test-image-sequencer.cjs  test-websocket.js
attached_assets/: DeefakeTextDetection_1753359879395.py  Pasted--Role-Expert-AI-Chat-Assistant-You-are-a-super-helpful-chat-assistant-named-Mira-built-by-MirageT-1753267735861_1753267735862.txt  Pasted-Great-here-s-a-breakdown-of-all-your-app-s-moving-parts-followed-by-a-comprehensive-technical-pro-1752935501032_1752935501033.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AuthModal.tsx  ChatSidebar.tsx  ImageSequencer.tsx  MiraAvatar.tsx  MiraPhoneMode.tsx  UserProfile.tsx  avatar-section.tsx  feedback-section.tsx  process-steps.tsx  upload-section.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: chat.tsx  home.tsx  live-voice-chat-broken.tsx  live-voice-chat.tsx  unified-chat.tsx
public/: preload-frames.js  service-worker.js
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts
server/services/: ai-detector-adapted.py  ai-detector-daemon.py  ai-detector-lite.py  ai-detector-ml.py  ai-detector-optimized.py  ai-detector-simple.py  ai-detector.py  aiDetector.ts  elevenlabs.ts  mlAiDetector.ts  model-cache.py  model_cache.py  openai.ts  pdf-parser.ts  simple-ai-detector.py  simpleAiDetector.ts  user-actual-desklib.py  user-desklib-model.py
shared/: schema.ts
