[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "askmira-ai-detector"
version = "1.0.0"
description = "AI Detection service using Desklib model"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "numpy>=1.21.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0"
]

[tool.setuptools]
py-modules = []